Added Maven 3.0.5 to Dockerfile